// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Slider snapshot defaultValue 1`] = `
<div>
  <div
    class="za-slider"
  >
    <div
      class="za-slider__content"
    >
      <div
        class="za-slider__line"
      >
        <div
          class="za-slider__line__bg"
          style="width: 10%;"
        />
      </div>
      <div
        aria-orientation="horizontal"
        aria-valuemax="100"
        aria-valuemin="0"
        class="za-slider__knob"
        role="slider"
        style="left: 10%;"
      >
        <div
          class="za-slider__knob__shadow"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Slider snapshot disabled 1`] = `
<div>
  <div
    class="za-slider za-slider--disabled"
  >
    <div
      class="za-slider__content"
    >
      <div
        class="za-slider__line"
      >
        <div
          class="za-slider__line__bg"
          style="width: 0%;"
        />
      </div>
      <div
        aria-orientation="horizontal"
        aria-valuemax="100"
        aria-valuemin="0"
        class="za-slider__knob"
        role="slider"
        style="left: 0%;"
      >
        <div
          class="za-slider__knob__shadow"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Slider snapshot marks 1`] = `
<div>
  <div
    class="za-slider"
  >
    <div
      class="za-slider__content"
    >
      <div
        class="za-slider__line"
      >
        <div
          class="za-slider__line__bg"
          style="width: 0%;"
        />
        <span
          class="za-slider__dot za-slider__dot--active"
          style="left: 0%;"
        />
        <span
          class="za-slider__dot"
          style="left: 26%;"
        />
        <span
          class="za-slider__dot"
          style="left: 60%;"
        />
        <span
          class="za-slider__dot"
          style="left: 100%;"
        />
      </div>
      <div
        aria-orientation="horizontal"
        aria-valuemax="100"
        aria-valuemin="0"
        class="za-slider__knob"
        role="slider"
        style="left: 0%;"
      >
        <div
          class="za-slider__knob__shadow"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Slider snapshot marks error 1`] = `
<div>
  <div
    class="za-slider za-slider--marked"
  >
    <div
      class="za-slider__content"
    >
      <div
        class="za-slider__line"
      >
        <div
          class="za-slider__line__bg"
          style="width: 0%;"
        />
      </div>
      <div
        aria-orientation="horizontal"
        aria-valuemax="100"
        aria-valuemin="0"
        class="za-slider__knob"
        role="slider"
        style="left: 0%;"
      >
        <div
          class="za-slider__knob__shadow"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Slider snapshot max 1`] = `
<div>
  <div
    class="za-slider"
  >
    <div
      class="za-slider__content"
    >
      <div
        class="za-slider__line"
      >
        <div
          class="za-slider__line__bg"
          style="width: 0%;"
        />
      </div>
      <div
        aria-orientation="horizontal"
        aria-valuemax="100"
        aria-valuemin="0"
        class="za-slider__knob"
        role="slider"
        style="left: 0%;"
      >
        <div
          class="za-slider__knob__shadow"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Slider snapshot min 1`] = `
<div>
  <div
    class="za-slider"
  >
    <div
      class="za-slider__content"
    >
      <div
        class="za-slider__line"
      >
        <div
          class="za-slider__line__bg"
          style="width: 0%;"
        />
      </div>
      <div
        aria-orientation="horizontal"
        aria-valuemax="100"
        aria-valuemin="0"
        class="za-slider__knob"
        role="slider"
        style="left: 0%;"
      >
        <div
          class="za-slider__knob__shadow"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Slider snapshot shallows correctly 1`] = `
<div>
  <div
    class="za-slider"
  >
    <div
      class="za-slider__content"
    >
      <div
        class="za-slider__line"
      >
        <div
          class="za-slider__line__bg"
          style="width: 0%;"
        />
      </div>
      <div
        aria-orientation="horizontal"
        aria-valuemax="100"
        aria-valuemin="0"
        class="za-slider__knob"
        role="slider"
        style="left: 0%;"
      >
        <div
          class="za-slider__knob__shadow"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Slider snapshot showMark 1`] = `
<div>
  <div
    class="za-slider za-slider--marked"
  >
    <div
      class="za-slider__content"
    >
      <div
        class="za-slider__line"
      >
        <div
          class="za-slider__line__bg"
          style="width: 0%;"
        />
        <span
          class="za-slider__dot za-slider__dot--active"
          style="left: 0%;"
        />
        <span
          class="za-slider__dot"
          style="left: 26%;"
        />
        <span
          class="za-slider__dot"
          style="left: 60%;"
        />
        <span
          class="za-slider__dot"
          style="left: 100%;"
        />
        <div
          class="za-slider__marks"
        >
          <span
            class="za-slider__mark"
            style="left: 0%;"
          >
            0
          </span>
          <span
            class="za-slider__mark"
            style="left: 26%;"
          >
            26
          </span>
          <span
            class="za-slider__mark"
            style="left: 60%;"
          >
            60
          </span>
          <span
            class="za-slider__mark"
            style="left: 100%;"
          >
            100
          </span>
        </div>
      </div>
      <div
        aria-orientation="horizontal"
        aria-valuemax="100"
        aria-valuemin="0"
        class="za-slider__knob"
        role="slider"
        style="left: 0%;"
      >
        <div
          class="za-slider__knob__shadow"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Slider snapshot step 1`] = `
<div>
  <div
    class="za-slider"
  >
    <div
      class="za-slider__content"
    >
      <div
        class="za-slider__line"
      >
        <div
          class="za-slider__line__bg"
          style="width: 0%;"
        />
      </div>
      <div
        aria-orientation="horizontal"
        aria-valuemax="100"
        aria-valuemin="0"
        class="za-slider__knob"
        role="slider"
        style="left: 0%;"
      >
        <div
          class="za-slider__knob__shadow"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Slider snapshot value 1`] = `
<div>
  <div
    class="za-slider"
  >
    <div
      class="za-slider__content"
    >
      <div
        class="za-slider__line"
      >
        <div
          class="za-slider__line__bg"
          style="width: 10%;"
        />
      </div>
      <div
        aria-orientation="horizontal"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="10"
        class="za-slider__knob"
        role="slider"
        style="left: 10%;"
      >
        <div
          class="za-slider__knob__shadow"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Slider snapshot vertical 1`] = `
<div>
  <div
    class="za-slider za-slider--vertical"
  >
    <div
      class="za-slider__content"
    >
      <div
        class="za-slider__line"
      >
        <div
          class="za-slider__line__bg"
          style="height: 0%;"
        />
      </div>
      <div
        aria-orientation="vertical"
        aria-valuemax="100"
        aria-valuemin="0"
        class="za-slider__knob"
        role="slider"
        style="bottom: 0%;"
      >
        <div
          class="za-slider__knob__shadow"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Slider snapshot vertical and marks 1`] = `
<div>
  <div
    class="za-slider za-slider--vertical za-slider--marked"
  >
    <div
      class="za-slider__content"
    >
      <div
        class="za-slider__line"
      >
        <div
          class="za-slider__line__bg"
          style="height: 0%;"
        />
        <span
          class="za-slider__dot za-slider__dot--active"
          style="bottom: 0%;"
        />
        <span
          class="za-slider__dot"
          style="bottom: 26%;"
        />
        <span
          class="za-slider__dot"
          style="bottom: 60%;"
        />
        <span
          class="za-slider__dot"
          style="bottom: 100%;"
        />
        <div
          class="za-slider__marks"
        >
          <span
            class="za-slider__mark"
            style="bottom: 0%;"
          >
            0
          </span>
          <span
            class="za-slider__mark"
            style="bottom: 26%;"
          >
            26
          </span>
          <span
            class="za-slider__mark"
            style="bottom: 60%;"
          >
            60
          </span>
          <span
            class="za-slider__mark"
            style="bottom: 100%;"
          >
            100
          </span>
        </div>
      </div>
      <div
        aria-orientation="vertical"
        aria-valuemax="100"
        aria-valuemin="0"
        class="za-slider__knob"
        role="slider"
        style="bottom: 0%;"
      >
        <div
          class="za-slider__knob__shadow"
        />
      </div>
    </div>
  </div>
</div>
`;
